--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,29 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Jananibd</title>
   <base href="/">
 
+  <!--for fb -->
+  <meta property="og:title" content="Jananibd | ISP (Internet Service Provider)" />
+  <meta property="og:site_name" content="Janani Technology Limited" />
+  <meta property="og:description" content="Internet Service Provider (ISP) in Bhuigor, Fatullah, Narayanganj" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://www.jananibd.com/" />
+
+  <meta property="og:image" content="https://i.imgur.com/dohqtmS.png" />
+  <meta property="og:image:width" content="600" />
+  <meta property="og:image:height" content="115" />
+
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
